# stream2hdf5

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs
