[package]
name = "stream2hdf5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.61"
chrono ="0.4"
ctrlc = "3.2"
byteorder = "1"
filedescriptor = "0.8.2"
hdf5 = "0.8.1"